# shell

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  AUTHORS.md  App.qml  BUILD.md  CMakeLists.txt  CONTRIBUTORS.md  Clock.qml  Compositor.qml  DEPENDENCIES.md  Effects.qml  HotCorner.qml  Indicator.qml  Layers.qml  NOTES.md  Panel.qml  PopupWindowAnimation.qml  PresentWindowsGrid.qml  README.md  ScreenView.qml  SlidingPanel.qml  SurfaceRenderer.qml  Theme.qml  ToplevelWindowAnimation.qml  TransientWindowAnimation.qml  WaylandClientWindow.qml  WaylandClientWindowChrome.qml  WaylandShellWindow.qml  WaylandWindow.qml  WaylandWindowChrome.qml  WindowAnimation.qml  WindowManagement.js  Workspace.qml  Workspaces.qml  WorkspacesLinearView.qml  WorkspacesView.qml  (+5 more)
client/: CMakeLists.txt  main.cpp  shellhelperapplication.cpp  shellhelperapplication.h  shellhelperclient.cpp  shellhelperclient.h
compositor/: CMakeLists.txt  Compositor.qml  TransientWindowAnimation.qml  WaylandClientWindow.qml  WaylandShellWindow.qml  WaylandWindow.qml  WindowAnimation.qml  WorkspacesView.qml  application.cpp  application.h  compositor.qbs  main.cpp  processlauncher.cpp  processlauncher.h  screensaver.cpp  screensaver.h  sessionmanager.cpp  sessionmanager.h  shell.qrc  socketserver.cpp  socketserver.h
compositor/dbus/: processlauncher.cpp  processlauncher.h
compositor/loginmanager/: logindbackend.cpp  logindbackend.h  logindsessioninfo.h  loginmanager.cpp  loginmanager.h  loginmanagerbackend.cpp
compositor/overlays/: UnresponsiveOverlay.qml
compositor/powermanager/: powermanagerbackend.h  systemdpowerbackend.cpp  systemdpowerbackend.h  upowerpowerbackend.cpp  upowerpowerbackend.h
compositor/processlauncher/: org.hawaiios.ProcessLauncher.xml  processlauncher.cpp  processlauncher.h
compositor/qml/: Compositor.qml  KeyBindings.qml  Output.qml  ShellSettings.qml  XWayland.qml  shell.qrc
compositor/screensaver/: screensaver.cpp  screensaver.h
compositor/session/: authenticator.cpp  authenticator.h  sessioninterface.cpp  sessioninterface.h
compositor/sessionmanager/: authenticator.cpp  authenticator.h  sessioninterface.cpp  sessioninterface.h  sessionmanager.cpp  sessionmanager.h
data/menu/: CMakeLists.txt  hawaii-applications.menu  hawaii-entertainment.directory  hawaii-main.directory  hawaii-work.directory  liri-applications.menu  liri-internet.directory  liri-main.directory  liri-system.directory  menu.qbs
data/settings/: CMakeLists.txt  hawaiisettings.kcfg.in  hawaiisettings.kcfgc.in  io.liri.desktop.background.gschema.xml.in  io.liri.desktop.interface.gschema.xml  io.liri.desktop.keybindings.gschema.xml  io.liri.desktop.lockscreen.gschema.xml.in  io.liri.desktop.panel.gschema.xml  io.liri.desktop.peripherals.gschema.xml  io.liri.hardware.screens.gschema.xml  io.liri.session.gschema.xml  io.liri.session.locale.gschema.xml  io.liri.shell.gschema.xml  io.liri.system.gschema.xml  launchersettings.kcfg  launchersettings.kcfgc  org.hawaii.desktop.background.gschema.xml.in  org.hawaii.desktop.fonts.gschema.xml  org.hawaii.desktop.interface.gschema.xml  org.hawaii.desktop.keybindings.gschema.xml  org.hawaii.desktop.keyboard.gschema.xml  org.hawaii.desktop.lockscreen.gschema.xml.in  org.hawaii.desktop.panel.gschema.xml  org.hawaii.desktop.peripherals.gschema.xml  org.hawaii.desktop.session.gschema.xml  org.hawaii.greenisland.json  org.hawaiios.desktop.background.gschema.xml.in  org.hawaiios.desktop.interface.gschema.xml  org.hawaiios.desktop.keybindings.gschema.xml  org.hawaiios.desktop.lockscreen.gschema.xml.in  org.hawaiios.desktop.panel.gschema.xml  org.hawaiios.desktop.peripherals.gschema.xml  org.hawaiios.desktop.session.gschema.xml  settings.qbs  shellrc.in
data/systemd/: CMakeLists.txt  hawaii-kms.service.in  hawaii-nested.service.in  hawaii-notifications-daemon.service.in  hawaii-polkit-agent.service.in  hawaii-session.service.in  hawaii-shell.service.in  hawaii-weston.service.in  hawaii.service.in  hawaii.target  liri-shell-helper.service.in  liri-shell-helper.target  liri-shell.service.in  liri-shell.target  liri.service.in  liri.target  systemd.qbs
data/wayland-sessions/: CMakeLists.txt  hawaii.desktop  hawaii.desktop.in  liri.desktop.in  wayland-sessions.qbs
declarative/appchooser/: CMakeLists.txt  actionlist.h  appchooserplugin.cpp  appsmodel.cpp  appsmodel.h  qmldir  rootmodel.cpp  sessioninterface.cpp  sessioninterface.h  systemmodel.cpp  systemmodel.h
declarative/hardware/: CMakeLists.txt  battery.cpp  battery.h  hardwareengine.cpp  hardwareengine.h  plugin.cpp  plugins.qmltypes  qmldir  storagedevice.cpp  storagedevice.h
declarative/launcher/: CMakeLists.txt  appidmapping_p.h  application.cpp  application.h  applicationaction.cpp  applicationaction.h  applicationinfo.cpp  (+36 more)
helper/: CMakeLists.txt  main.cpp  shellhelperapplication.cpp  shellhelperapplication.h  shellhelperclient.cpp  shellhelperclient.h
libhawaii/: CMakeLists.txt  HawaiiConfig.cmake.in  logging.h  qgsettings.cpp  qgsettings.h  qgvariantutils.cpp  qgvariantutils.h  utils.cpp  utils.h
platformtheme/: CMakeLists.txt  hawaiitheme.cpp  hawaiitheme.h  hawaiitheme_p.cpp  hawaiitheme_p.h  hintssettings.cpp  hintssettings.h  main.cpp  resourcehelper.cpp  resourcehelper.h
plugin/: CMakeLists.txt  abstractentry.h  abstractmodel.cpp  actionlist.h  appchooserplugin.cpp  appsmodel.cpp  processrunner.cpp  processrunner.h  qmldir
scripts/: CMakeLists.txt  hawaii-session.in  hawaii.in  liri-session.in  scripts.qbs  starthawaii.in  update_qmltypes.sh
session/: CMakeLists.txt  compositorlauncher.cpp  compositorlauncher.h  compositorprocess.cpp  compositorprocess.h  hawaii-session.qrc  main.cpp  processcontroller.cpp  processcontroller.h  processlauncher.cpp  processlauncher.h  respawnprocess.cpp  respawnprocess.h  screensaver.cpp  screensaver.h  sessionadaptor.cpp  sessionadaptor.h  sessionleader.cpp  sessionleader.h  sessionmanager.cpp  sessionmanager.h  socketclient.cpp  socketclient.h  socketserver.cpp  socketserver.h  vthandler.cpp  vthandler.h
src/: CMakeLists.txt  programs.qbs
(+2289 files in other folders)
