add_subdirectory(client)
if(GreenIsland_FOUND)
    add_subdirectory(compositor)
endif()
add_subdirectory(daemons)
add_subdirectory(declarative)
add_subdirectory(elements)
add_subdirectory(libhawaiishell)
add_subdirectory(lookandfeel)
add_subdirectory(platformthemes)
add_subdirectory(screensaver)
add_subdirectory(server)
add_subdirectory(shells)
add_subdirectory(styles)
